--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@ certifi==2024.8.30
 charset-normalizer==3.4.0
 colorama==0.4.6
 Django==5.1.2
+django-authtools==2.0.1
 django-cors-headers==4.6.0
 djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.1
 google-ai-generativelanguage==0.6.10
 google-api-core==2.23.0
 google-api-python-client==2.153.0
@@ -24,6 +26,7 @@ pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pydantic==2.9.2
 pydantic_core==2.23.4
+PyJWT==2.10.1
 pyparsing==3.2.0
 python-dotenv==1.0.1
 requests==2.32.3
